--- a/src/service/quote/CMakeLists.txt
+++ b/src/service/quote/CMakeLists.txt
@@ -1,8 +1,5 @@
 cmake_minimum_required(VERSION 3.19.2)
 
-# use GenerateExportHeader module
-include(GenerateExportHeader)
-
 set(CMAKE_CXX_STANDARD 11)
 
 if (NOT QUOTE_SHARED_NAME)
@@ -13,22 +10,24 @@ if (NOT QUOTE_STATIC_NAME)
     set(QUOTE_STATIC_NAME quote-static)
 endif()
 
-if (NOT LIBCPP_INCLUDE_DIR)
-    set(LIBCPP_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/3rdparty/libcpp)
-endif()
+find_package(Boost COMPONENTS 
+    program_options)
 
-include_directories(${LIBCPP_INCLUDE_DIR})
+include_directories(${Boost_INCLUDE_DIRS})
 include_directories(${CMAKE_SOURCE_DIR}/deps/include/breakpad)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 link_directories(${CMAKE_SOURCE_DIR}/deps/lib)
+link_directories(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 
 if (BUILD_SHARED)
     add_library(${QUOTE_SHARED_NAME} SHARED 
         ${CMAKE_CURRENT_SOURCE_DIR}/quote.cpp
     )
 
-    target_link_libraries(${QUOTE_SHARED_NAME} ${CMAKE_DL_LIBS})
+    target_link_libraries(${QUOTE_SHARED_NAME} 
+        ${CMAKE_DL_LIBS}
+        ${Boost_LIBRARIES})
 endif()
 
 if (BUILD_STATIC)
@@ -36,7 +35,9 @@ if (BUILD_STATIC)
         ${CMAKE_CURRENT_SOURCE_DIR}/quote.cpp
     )
 
-    target_link_libraries(${QUOTE_STATIC_NAME} ${CMAKE_DL_LIBS})
+    target_link_libraries(${QUOTE_STATIC_NAME} 
+        ${CMAKE_DL_LIBS}
+        ${Boost_LIBRARIES})
 endif()
 
 message("service quote build success")
