--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,18 +5,9 @@ project(livermore-broker)
 add_subdirectory(service)
 
 find_package(Boost COMPONENTS 
-    filesystem
-    coroutine
     program_options)
 
-find_package(spdlog)
-
-if (NOT DEPS_DIR)
-    set(DEPS_DIR ${CMAKE_SOURCE_DIR}/deps)
-endif()
-
 include_directories(${Boost_INCLUDE_DIRS})
-include_directories(${DEPS_DIR}/include/breakpad)
 include_directories(${CMAKE_SOURCE_DIR}/src)
 
 link_directories(${DEPS_DIR}/lib)
@@ -29,7 +20,4 @@ add_executable(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME} 
     ${CMAKE_DL_LIBS}
     ${Boost_LIBRARIES}
-    breakpad_client
-    spdlog::spdlog
-    pthread
-    quote)
+    pthread)
