--- a/src/config/livermore-broker.ini
+++ b/src/config/livermore-broker.ini
@@ -3,11 +3,15 @@ log_path=logs/manage/log.log
 log_file_size_mb=5
 log_file_num=10
 log_file_rotate_on_open=true
+log_min_lvl = 1
 crash_path=./
+service_scan_dur_ms=100
+service_array=quote # value style: broadcast,database,quote,sentinel
 
 [quote]
 log_path=logs/quote/log.log
 log_file_size_mb=5
 log_file_num=10
 log_file_rotate_on_open=true
+log_min_lvl = 1
 crash_path=./
