add cmake module

--- a/src/service/manage/CMakeLists.txt
+++ b/src/service/manage/CMakeLists.txt
@@ -19,36 +19,32 @@ find_package(Boost COMPONENTS
 
 find_package(PkgConfig REQUIRED)
 find_package(spdlog REQUIRED)
-find_package(fmt REQUIRED)
-pkg_check_modules(BREAKPAD REQUIRED breakpad-client)
 
 set(COMMON_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../common)
+set(DEPS_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../deps)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${COMMON_SOURCE_DIR})
-include_directories(${BREAKPAD_INCLUDE_DIRS})
-include_directories(${CMAKE_SOURCE_DIR}/deps/include)
+include_directories(${DEPS_SOURCE_DIR}/include)
+include_directories(${DEPS_SOURCE_DIR}/include/breakpad)
+include_directories(${DEPS_SOURCE_DIR}/include/fmt)
 
 link_directories(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
-link_directories(${CTP_LIBRARY_DIR})
-link_directories(${BREAKPAD_LIBRARY_DIRS})
-link_directories(${CMAKE_SOURCE_DIR}/deps/lib)
+link_directories(${DEPS_SOURCE_DIR}/lib)
 
 aux_source_directory(./ SRC)
 aux_source_directory(${COMMON_SOURCE_DIR} COMM_SRC)
 
 if (BUILD_SHARED)
-    add_library(${MANAGE_SHARED_NAME} SHARED ${SRC}
-        ${COMMON_SOURCE_DIR}/application_base.cpp
-        ${COMMON_SOURCE_DIR}/config_mgr_base.cpp)
+    add_library(${MANAGE_SHARED_NAME} SHARED ${SRC} ${COMM_SRC})
 
     target_link_libraries(${MANAGE_SHARED_NAME} 
         ${CMAKE_DL_LIBS}
         ${Boost_LIBRARIES}
-        breakpad_client
+        breakpad
         spdlog::spdlog
         pthread
-        fmt::fmt)
+        fmt)
 endif()
 
 if (BUILD_STATIC)
@@ -57,10 +53,10 @@ if (BUILD_STATIC)
     target_link_libraries(${MANAGE_STATIC_NAME} 
         ${CMAKE_DL_LIBS}
         ${Boost_LIBRARIES}
-        breakpad_client
+        breakpad
         spdlog::spdlog
         pthread
-        fmt::fmt)
+        fmt)
 endif()
 
 message("service ${PROJECT_NAME} build success")
