cmake eigen3, gtest, libzmq

--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -46,3 +46,17 @@ set(BOOST_USE_STATIC_LIBS true)
 set(BOOST_USE_COROUTINE true)
 set(BOOST_USE_PROGRAM_OPTIONS true)
 include(FindFetchBoost)
+
+# libzmq + v4.3.4
+set(LIBZMQ_VERSION "v4.3.4")
+set(LIBZMQ_FETCH_WAY "https")
+set(LIBZMQ_SOURCE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/libzmq)
+set(LIBZMQ_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
+include(FindFetchLibzmq)
+
+# eigen3 + 3.4.0
+set(EIGEN3_VERSION "3.4.0")
+set(EIGEN3_FETCH_WAY "https")
+set(EIGEN3_SOURCE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/eigen3)
+set(EIGEN3_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
+include(FindFetchEigen3)
