fix bug load fail

--- a/src/config/livermore-broker.ini
+++ b/src/config/livermore-broker.ini
@@ -6,7 +6,7 @@ log_file_rotate_on_open=true
 log_min_lvl = 1
 crash_path=./
 service_scan_dur_ms=100
-service_array=quote # value style: broadcast,database,quote,sentinel
+service_array=quote
 
 [quote]
 log_path=logs/quote/log.log
@@ -15,5 +15,9 @@ log_file_num=10
 log_file_rotate_on_open=true
 log_min_lvl = 1
 crash_path=./
-flow_md_path=./flow_md/
-instrument_path=./instruments
+ctp_ip=218.28.130.102
+ctp_port=41413
+ctp_flow_md_path=./flow_md/
+ctp_using_udp=false
+ctp_multicast=false
+ctp_instruments=IF1809,IF1808
