--- a/src/service/manage/CMakeLists.txt
+++ b/src/service/manage/CMakeLists.txt
@@ -24,6 +24,8 @@ find_package(Boost COMPONENTS
 
 find_package(PkgConfig REQUIRED)
 find_package(spdlog REQUIRED)
+find_package(fmt REQUIRED)
+pkg_check_modules(BREAKPAD REQUIRED breakpad-client)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${COMMON_SOURCE_DIR})
@@ -32,6 +34,8 @@ include_directories(${DEPS_DIR}/include/breakpad)
 include_directories(${DEPS_DIR}/include/fmt)
 
 link_directories(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
+link_directories(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
+link_directories(${BREAKPAD_LIBRARY_DIRS})
 link_directories(${DEPS_DIR}/lib)
 
 aux_source_directory(./ SRC)
@@ -43,10 +47,10 @@ if (BUILD_SHARED)
     target_link_libraries(${MANAGE_SHARED_NAME} 
         ${CMAKE_DL_LIBS}
         ${Boost_LIBRARIES}
-        breakpad
+        breakpad_client
         spdlog::spdlog
         pthread
-        fmt)
+        fmt::fmt)
 endif()
 
 if (BUILD_STATIC)
@@ -55,10 +59,10 @@ if (BUILD_STATIC)
     target_link_libraries(${MANAGE_STATIC_NAME} 
         ${CMAKE_DL_LIBS}
         ${Boost_LIBRARIES}
-        breakpad
+        breakpad_client
         spdlog::spdlog
         pthread
-        fmt)
+        fmt::fmt)
 endif()
 
 message("service ${PROJECT_NAME} build success")
